# chroma

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  environment_Mac.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
chroma/: __init__.py
chroma/assets/centering/: centering_2g3n.params
chroma/data/: __init__.py  protein.py  system.py  system_support.py
chroma/layers/: attention.py  graph.py
chroma/layers/structure/: backbone.py  conditioners.py  diffusion.py  mvn.py  protein_graph.py  rmsd.py  transforms.py
chroma/models/: __init__.py  chroma.py  graph_backbone.py  graph_classifier.py  graph_design.py  graph_design_components.py  graph_design_parts.py  model_configs.py  procap.py
chroma/utility/: api.py  chroma.py  model.py  ngl.py  torch.py
scripts/: generate_lockfiles.py
tests/: helpers.py
tests/data/: test_protein.py  test_system.py
tests/layers/: test_attention.py  test_norm.py
tests/layers/structure/: test_conditioners.py  test_mvn.py  test_potts.py  test_protein_graph.py  test_rmsd.py  test_sidechain.py
tests/models/: test_chroma.py  test_graph_backbone.py  test_graph_classifier.py  test_graph_design.py
tests/resources/: README.md
tests/utility/: test_api.py  test_init_imports.py  test_packaging.py  test_torch.py
